problems with searching resolved

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -7,6 +7,7 @@ certificate.wrong-duration=Неправильная продолжительно
 certificate.wrong-id=Неправильный идентификатор
 certificate.wrong-name=Неправильное имя
 certificate.wrong-price=Неправильная цена
+sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
 tag.not-found-id=Подарочный сертификат не найден с введенным идентификатором
 tag.wrong-id=Неправильный идентификатор
