--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -1,4 +1,5 @@
 certificate.exists=Подарочный сертификат уже существует
+certificate.name-exists=Подарочный сертификат с таким именем уже существует
 certificate.not-found-id=Подарочный сертификат не найдет с введенным идентификатором
 certificate.null=Подарочный сертификат null
 certificate.unexpected.cant-update=Неизвестная ошибка при модификации подарочного сертификата
@@ -9,7 +10,7 @@ certificate.wrong-name=Неправильное имя
 certificate.wrong-price=Неправильная цена
 sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
-tag.not-found-id=Подарочный сертификат не найден с введенным идентификатором
+tag.not-found-id=Тэг не найден с введенным идентификатором
 tag.wrong-id=Неправильный идентификатор
 tag.wrong-name=Неправильное имя тэга
 unexpected.error=Неизвестная ошибка на стороне сервера
