error handling parsing

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -8,9 +8,17 @@ certificate.wrong-duration=Неправильная продолжительно
 certificate.wrong-id=Неправильный идентификатор
 certificate.wrong-name=Неправильное имя
 certificate.wrong-price=Неправильная цена
+media-not-acceptable=Неразрешенное медиа
+media-not-supported=Метод не доступен для ввденного url
+method-argument-not-valid=Невалидный параметр метода
+method-not-allowed=Метод не разрешен для введенного url
+missing-path-variable=Не введена path variable
+missing-servlet-request-param=Пропущен параметр сервлета
+not-readable=Нечитаемое сообщение
 sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
 tag.not-found-id=Тэг не найден с введенным идентификатором
 tag.wrong-id=Неправильный идентификатор
 tag.wrong-name=Неправильное имя тэга
+type-mismatch=Неправильный тип части запроса
 unexpected.error=Неизвестная ошибка на стороне сервера
