user service ready

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -22,3 +22,4 @@ tag.wrong-id=Неправильный идентификатор
 tag.wrong-name=Неправильное имя тэга
 type-mismatch=Неправильный тип части запроса
 unexpected.error=Неизвестная ошибка на стороне сервера
+user.not-found=Пользователь не найден с введенным идентификатором
