order service not completed

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -2,7 +2,6 @@ certificate.exists=Подарочный сертификат уже сущест
 certificate.name-exists=Подарочный сертификат с таким именем уже существует
 certificate.not-found-id=Подарочный сертификат не найдет с введенным идентификатором
 certificate.null=Подарочный сертификат null
-certificate.unexpected.cant-update=Неизвестная ошибка при модификации подарочного сертификата
 certificate.wrong-description=Неправильное описание
 certificate.wrong-duration=Неправильная продолжительность
 certificate.wrong-id=Неправильный идентификатор
@@ -15,6 +14,8 @@ method-not-allowed=Метод не разрешен для введенного 
 missing-path-variable=Не введена path variable
 missing-servlet-request-param=Пропущен параметр сервлета
 not-readable=Нечитаемое сообщение
+order.not-fount=Заказ не найден по введенному идентификатору
+order.wrong-id=Некорректный идентификатор заказа
 sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
 tag.not-found-id=Тэг не найден с введенным идентификатором
@@ -23,3 +24,4 @@ tag.wrong-name=Неправильное имя тэга
 type-mismatch=Неправильный тип части запроса
 unexpected.error=Неизвестная ошибка на стороне сервера
 user.not-found=Пользователь не найден с введенным идентификатором
+user.wrong-id=Неправильный идентификатор пользователя
