all rest methods created

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -14,6 +14,7 @@ method-not-allowed=Метод не разрешен для введенного 
 missing-path-variable=Не введена path variable
 missing-servlet-request-param=Пропущен параметр сервлета
 not-readable=Нечитаемое сообщение
+order.empty-gift-certificates=Для создания заказа необходимы подарочные сертификаты
 order.not-fount=Заказ не найден по введенному идентификатору
 order.wrong-id=Некорректный идентификатор заказа
 sort.wrong-sort=Неправильные параметры сортировки
