--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -17,6 +17,7 @@ not-readable=Нечитаемое сообщение
 order.empty-gift-certificates=Для создания заказа необходимы подарочные сертификаты
 order.not-fount=Заказ не найден по введенному идентификатору
 order.wrong-id=Некорректный идентификатор заказа
+pagination.wrong-parameters=Неправильные параметры пагинации
 sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
 tag.mapper-list=Некорректный параметр имен тэгов
