complex primary key works now

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -1,5 +1,6 @@
 certificate.exists=Подарочный сертификат уже существует
 certificate.name-exists=Подарочный сертификат с таким именем уже существует
+certificate.not-found-by-name=Подарочный сертификат не найден с введенным именем
 certificate.not-found-id=Подарочный сертификат не найдет с введенным идентификатором
 certificate.null=Подарочный сертификат null
 certificate.wrong-description=Неправильное описание
@@ -15,9 +16,15 @@ missing-path-variable=Не введена path variable
 missing-servlet-request-param=Пропущен параметр сервлета
 not-readable=Нечитаемое сообщение
 order.empty-gift-certificates=Для создания заказа необходимы подарочные сертификаты
+order.missed-id-name=Пропущены и идентификатор, и имя
 order.not-fount=Заказ не найден по введенному идентификатору
+order.wrong-count=Число товаров не может быть меньше одного
 order.wrong-id=Некорректный идентификатор заказа
 pagination.wrong-parameters=Неправильные параметры пагинации
+purchase.null=Покупка сертификата null
+purchase.wrong-count=Неправильное количество в покупке
+purchase.wrong-old-name=Неправильное старое имя
+purchase.wrong-price-for-one=Неправильная цена на сертификат
 sort.wrong-sort=Неправильные параметры сортировки
 tag.exists=Подарочный сертификат с этим именем уже существует
 tag.mapper-list=Некорректный параметр имен тэгов
