labeles in multilang added

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -1,13 +1,13 @@
-certificate.exists=Подарочный сертификат уже существует
-certificate.name-exists=Подарочный сертификат с таким именем уже существует
-certificate.not-found-by-name=Подарочный сертификат не найден с введенным именем
-certificate.not-found-id=Подарочный сертификат не найдет с введенным идентификатором
+certificate.exists=Подарочный сертификат уже существует (name = {0})
+certificate.name-exists=Подарочный сертификат с таким именем уже существует(name = {0})
+certificate.not-found-by-name=Подарочный сертификат не найден с введенным именем(name = {0})
+certificate.not-found-id=Подарочный сертификат не найдет с введенным идентификатором (id = {0})
 certificate.null=Подарочный сертификат null
-certificate.wrong-description=Неправильное описание
-certificate.wrong-duration=Неправильная продолжительность
-certificate.wrong-id=Неправильный идентификатор
-certificate.wrong-name=Неправильное имя
-certificate.wrong-price=Неправильная цена
+certificate.wrong-description=Неправильное описание (description = {0})
+certificate.wrong-duration=Неправильная продолжительность (duration = {0})
+certificate.wrong-id=Неправильный идентификатор (id = {0})
+certificate.wrong-name=Неправильное имя (name = {0})
+certificate.wrong-price=Неправильная цена (price = {0})
 media-not-acceptable=Неразрешенное медиа
 media-not-supported=Метод не доступен для ввденного url
 method-argument-not-valid=Невалидный параметр метода
@@ -17,21 +17,22 @@ missing-servlet-request-param=Пропущен параметр сервлета
 not-readable=Нечитаемое сообщение
 order.empty-gift-certificates=Для создания заказа необходимы подарочные сертификаты
 order.missed-id-name=Пропущены и идентификатор, и имя
-order.not-fount=Заказ не найден по введенному идентификатору
-order.wrong-count=Число товаров не может быть меньше одного
-order.wrong-id=Некорректный идентификатор заказа
-pagination.wrong-parameters=Неправильные параметры пагинации
+order.not-fount=Заказ не найден по введенному идентификатору (id = {0})
+order.wrong-count=Число товаров не может быть меньше одного или null (count = {0})
+order.wrong-id=Некорректный идентификатор заказа (id = {0})
+pagination.wrong-parameters=Неправильные параметры пагинации (pageNumber = {0}, pageSize = {1})
 purchase.null=Покупка сертификата null
-purchase.wrong-count=Неправильное количество в покупке
-purchase.wrong-old-name=Неправильное старое имя
-purchase.wrong-price-for-one=Неправильная цена на сертификат
-sort.wrong-sort=Неправильные параметры сортировки
-tag.exists=Подарочный сертификат с этим именем уже существует
-tag.mapper-list=Некорректный параметр имен тэгов
-tag.not-found-id=Тэг не найден с введенным идентификатором
-tag.wrong-id=Неправильный идентификатор
-tag.wrong-name=Неправильное имя тэга
+purchase.wrong-count=Неправильное количество в покупке (count = {0})
+purchase.wrong-old-name=Неправильное старое имя (name = {0})
+purchase.wrong-price-for-one=Неправильная цена на сертификат (price = {0})
+sort.wrong-sort=Неправильные параметры сортировки (sort = {0})
+sort.wrong-sort.asc=Неправильные параметры сортировки (asc = {0})
+tag.exists=Подарочный сертификат с этим именем уже существует (name = {0})
+tag.mapper-list=Некорректный параметр имен тэгов (tagName = {0})
+tag.not-found-id=Тэг не найден с введенным идентификатором (id = {0})
+tag.wrong-id=Неправильный идентификатор (id = {0})
+tag.wrong-name=Неправильное имя тэга (name = {0})
 type-mismatch=Неправильный тип части запроса
 unexpected.error=Неизвестная ошибка на стороне сервера
-user.not-found=Пользователь не найден с введенным идентификатором
-user.wrong-id=Неправильный идентификатор пользователя
+user.not-found=Пользователь не найден с введенным идентификатором (id = {0})
+user.wrong-id=Неправильный идентификатор пользователя (id = {0})
