--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -35,4 +35,8 @@ tag.wrong-name=Неправильное имя тэга (name = {0})
 type-mismatch=Неправильный тип части запроса
 unexpected.error=Неизвестная ошибка на стороне сервера
 user.not-found=Пользователь не найден с введенным идентификатором (id = {0})
+user.null=Пользователь null
+user.username-exists=Пользователь уже существует (username = {0})
 user.wrong-id=Неправильный идентификатор пользователя (id = {0})
+user.wrong-password=Некорректный пароль
+user.wrong-username=Имя пользователя неверно (username = {0})
