duplicated tags resolved

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -1,3 +1,4 @@
+certificate.duplicated-tags=Названия тэгов повторяются (names = {0})
 certificate.exists=Подарочный сертификат уже существует (name = {0})
 certificate.name-exists=Подарочный сертификат с таким именем уже существует(name = {0})
 certificate.not-found-by-name=Подарочный сертификат не найден с введенным именем(name = {0})
