--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -9,6 +9,7 @@ certificate.wrong-duration=Неправильная продолжительно
 certificate.wrong-id=Неправильный идентификатор (id = {0})
 certificate.wrong-name=Неправильное имя (name = {0})
 certificate.wrong-price=Неправильная цена (price = {0})
+forbidden=Ресурс запрещен
 media-not-acceptable=Неразрешенное медиа
 media-not-supported=Метод не доступен для ввденного url
 method-argument-not-valid=Невалидный параметр метода
@@ -34,6 +35,7 @@ tag.not-found-id=Тэг не найден с введенным идентифи
 tag.wrong-id=Неправильный идентификатор (id = {0})
 tag.wrong-name=Неправильное имя тэга (name = {0})
 type-mismatch=Неправильный тип части запроса
+unauthorized=Неавторизованный запрос
 unexpected.error=Неизвестная ошибка на стороне сервера
 user.not-found=Пользователь не найден с введенным идентификатором (id = {0})
 user.null=Пользователь null
