run command line

--- a/giftcertificates/core/src/main/resources/message_ru.properties
+++ b/giftcertificates/core/src/main/resources/message_ru.properties
@@ -41,5 +41,6 @@ user.not-found=Пользователь не найден с введенным 
 user.null=Пользователь null
 user.username-exists=Пользователь уже существует (username = {0})
 user.wrong-id=Неправильный идентификатор пользователя (id = {0})
+user.wrong-name=Некорректное имя (name = {0})
 user.wrong-password=Некорректный пароль
 user.wrong-username=Имя пользователя неверно (username = {0})
